                  - Walk through the category hierarchy and show post links extending Walker_Category class
                  
11 Mar, 2019   'reload after target select'
                  - If you choose  different target for link, reload it.
                  - also svgs are positioned better.
                  
13 Mar, 2019   'sitemap corrections after testing"

13 Mar, 2019   'correct OS detection'

14 Mar, 2019   'checkbox firefox bug'
                  - firefox reads twice the label of checkbox if label is not wrapped the selection tag.
                  - also: if you choose link target (in reading options) and press enter key (as screen readers often do ) reload the page.
                  - but if you change link target with mouse, there is no reload.
                  
18 Mar, 2019   'sitemap fixings'
                  - pages are in unordered list instead of ordered list
                  
20 Mar, 2019   'sitmap current page indicator'
                  - current page is not link any longer

20 Mar, 2019   'handles yoast seo primary category in sitemap'
                  - When one post has more categories, sitemap lists only in its Yoast primary category.
                  
20 Mar, 2019   'exclude pages from sitemap'
                  Add parameter to the Sitemap->pages() method to exclude pages from sitemap
                  
21 Mar, 2019   'toolbar target selector as buttons'
                  Durintg testing, we have found different bug in Firefox: dropdown list did not worked there.
                  We changed target selector dropdown list to button.
                  
21 Mar, 2019   'toolbar design'
                  Same size buttons and corrections of design.
                  
21 Mar, 2019   'avatar handling enhancement'
                  Avatar alt text missed the quotation mark - fixed
                  Avatar HTML markup is more clean now
                  
21 Mar, 2019   'add hours to Hungarian contents'